tests/compile_fail/derive_for_unit_struct.stderr
error: `CheckInitialState` procedural macro is no allowed for unit structs
 --> $DIR/derive_for_unit_struct.rs:6:1
  |
6 | struct Unit;
  | ^^^^^^^^^^^^
